2013-11-20  Werner Lemberg  <wl@gnu.org>

	Increase file path size.

	* src/compos.c (main), src/ftchkwd.c (main), src/ftdump.c (main),
	src/ftlint.c (main), src/ftmemchk.c (main), src/ftsbit.c (main),
	src/fttimer.c (main), src/fttry.c (main): Increase array size of
	`filename' and `alt_filename' to 1024.

2013-11-13  Werner Lemberg  <wl@gnu.org>

	* Makefile (FT_H): Update to new header layout of FreeType.

2013-11-05  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Improve display of point tags.

	* src/ttdebug.c (old_tag_to_new): Removed, no longer used.
	(display_changed_points, show_points_table): Display tags with
	mnemonic characters instead of ORed numbers.
	(RunIns) <'h'>: Updated.

2013-11-05  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Enable debugging of composite glyphs (again).

	This was lost while improving key handling.

	* src/ttdebug.c (RunIns): Introduce variable `really_leave' to
	insert one stop before really leaving the current glyph range.
	Without that, inspecting the current data right after finishing the
	hinting of a subglyph wouldn't be possible.
	(main): Stay in loop even if `FT_Load_Glyph' returns zero.

2013-11-04  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Provide man page and compile program by default.

	* Makefile (EXES): Add `ttdebug'.

	* src/ttdebug.1: New file.

2013-11-01  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Make `B' emit a function backtrace.

	This needs the today's version of the FreeType library.

	* src/ttdebug (RunIns) <'h'>: Updated.
	<'B'>: Print backtrace.

2013-11-01  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Make `p' set a breakpoint at previous position.

	* src/ttdebug.c (RunIns): Store information about last position in
	`last_IP' and `last_range'.
	<'h'>, <'c'>, <'f'>, <'n'>, <'s'>: Updated.
	<'p'>: Set breakpoint at previous instruction.

2013-10-31  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Minor.

	* src/ttdebug.c: Make full-sentence messages where appropriate.
	(RunIns): Make help screen more compact vertically.
